--- a/style.css
+++ b/style.css
@@ -6,10 +6,14 @@ body{
     /*FIX ME...Mobile Image Distorted*/  
     min-height: 100vh; 
     background-image: url(TesoroImage.jpg);
-    background-size: cover; 
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
     font-family: 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+    background-color: white; 
+    background-attachment: fixed;
+    background-size: 100% 100%;
     
 } 
 nav{
@@ -19,13 +23,19 @@ nav{
     box-shadow: 3px 3px 5px rgba(0,0,0,0.1); 
 }
 nav ul{
-    padding-top: 13px;
-    height: 42px;
-    width: 100%;
-    list-style: none;
     display: flex; 
-    justify-content: flex-end;
-    text-align: center;
+    justify-content: center; 
+    align-items: center; 
+    margin: 0;
+    padding-top: 15px;
+    list-style-type: none;
+    
+    position: fixed;
+    width: 100%;
+    height: 9%; 
+    background-color: rgb(21, 44, 58); 
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+    color: white; 
 }
 nav li{
     height: 50px;
@@ -89,6 +99,7 @@ nav li:first-child{
 }
 .dropdown {
     position: relative;
+    letter-spacing: 1px;
 }
 
 .dropdown-content {
@@ -161,7 +172,48 @@ nav li:first-child{
     text-align: center;
 }
 
+.imageSection{
+    -webkit-text-fill-color: #ffff; 
+    padding-top: 4%; 
+    padding-bottom: 25%; /* Percentage maintians image ratio */ 
+    text-align: center;
+}
 
+.montserrat-font {
 
+ /* <uniquifier>: Use a unique and descriptive class name
+ <weight>: Use a value from 100 to 900 */
 
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 350;
+  font-style: normal;
+}
+
+.open-sans-font {
+
+/* <uniquifier>: Use a unique and descriptive class name
+ <weight>: Use a value from 300 to 800 */
+
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
+.search-container {
+    display: flex-end;
+    justify-content: flex-end; /* Aligns to the right */
+   
+}
+
+.search-bar {
+    display: flex;
+}
+
+.btn {
+    margin-left: 10px; /* Adjust the value as needed for spacing */
+}
 
