--- a/style.css
+++ b/style.css
@@ -106,11 +106,27 @@ nav li:first-child{
     display: none;
     position: absolute;
     background-color: rgba(255, 255, 255, 0.345);
+    backdrop-filter: blur(10px);
+    background: rgba(0,119,181,0.75);
+    box-shadow: -10px 0 10px rgba(0,0,0,0.1);
+    min-width: 160px;
+    z-index: 1;
+    border-radius: 10px;
+}
+
+.dropdown-login {
+    display: none;
+    position: absolute;
+    background-color: slategray;
     min-width: 160px;
     z-index: 1;
 }
 
 .dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropdown-login {
     display: block;
 }
 
@@ -138,7 +154,7 @@ nav li:first-child{
 .rectangle{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100px;
-    padding-top: 2%;
+    padding-top: 3%;
     background-color: #ffffff;
     text-align: center;
     width: 100vw;
@@ -183,7 +199,7 @@ nav li:first-child{
 
  /* <uniquifier>: Use a unique and descriptive class name
  <weight>: Use a value from 100 to 900 */
-
+  
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -218,6 +234,60 @@ nav li:first-child{
     margin-left: 0px; /* Adjust the value as needed for spacing */
     
 }
+
+.login-background{
+    background-color: rgba(255, 255, 255, 0.345);
+    backdrop-filter: blur(10px);
+    box-shadow: -10px 0 10px rgba(0,0,0,0.1);
+    color: black;
+    padding: 40%;
+    width: 425px;
+
+}
+
+.center-body{
+    background-color: #ffffff;
+    text-align: center;
+}
+
+.cust_logos{
+    padding-top: 2%;
+    background-color: #ffffff;
+    text-align: center;
+    filter: grayscale(100%);
+    filter: brightness(100%);
+}
+
+footer{
+    background-color: #ffffff;
+}
+
+.contact-rectangle{
+    text-align: center;
+    background-color: #ffffff;
+   
+}
+
+.form{
+    padding-left: 10%;
+    padding-right: 10%;
+    align-items: center;
+    text-align: center;
+    align-content: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
