--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
     align-items: center;
 }
 body{
-    min-height: 100vh;
     background-image: url('/Users/kevinsimac/Desktop/TesoroImage (1).jpg');
     background-size: cover; /* Change to cover to maintain aspect ratio */
     background-repeat: no-repeat;
@@ -13,6 +12,7 @@ body{
     font-family: 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: white; 
     background-attachment: fixed; /* Keep this if you want a fixed background */
+    
 }
 
 nav{
@@ -20,6 +20,7 @@ nav{
     width: 100%; 
     background-color: rgb(21,44,58); 
     box-shadow: 3px 3px 5px rgba(0,0,0,0.1); 
+
 }
 nav ul{
     display: flex; 
@@ -190,8 +191,8 @@ nav li:first-child{
 
 .imageSection{
     -webkit-text-fill-color: #ffff; 
-    padding-top: 4%; 
-    padding-bottom: 25%; /* Percentage maintians image ratio */ 
+    padding-top: 3.5%; 
+    padding-bottom: 23%; /* Percentage maintians image ratio */ 
     text-align: center;
 }
 
@@ -261,7 +262,6 @@ nav li:first-child{
 footer{
     background-color: #ffffff;
     
-    
 }
 
 .contact-rectangle{
@@ -300,7 +300,20 @@ footer{
 
 }
 
+.solar-description-left{
+    background-color: #ffffff;
+    padding-left: 10%;
+    padding-right: 10%;
+    display: flex;
 
+}
 
-
+.solar-description-right{
+    background-color: #ffffff;
+    padding-left: 10%;
+    padding-right: 10%;
+    display:flex; 
+    
+   
+}
 
