--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 
+
 *{
     margin: 0;
     padding: 0; 
     align-items: center;
 }
 body{
-    background-image: url('/Users/kevinsimac/Desktop/TesoroImage (1).jpg');
-    background-size: cover; /* Change to cover to maintain aspect ratio */
+    background-image: url('https://resourcecenter.lennar.com/wp-content/uploads/2023/06/OCH_Campana_Tesoro_Rend_StreetScene-1920x1080.jpg');
+    background-size: maintain; /* Change to cover to maintain aspect ratio */
     background-repeat: no-repeat;
     background-position: center;
     font-family: 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -19,7 +20,7 @@ nav{
     position:fixed;
     width: 100%; 
     background-color: rgb(21,44,58); 
-    box-shadow: 3px 3px 5px rgba(0,0,0,0.1); 
+    box-shadow: 3px 3px 5px rgba(168, 10, 10, 0.1); 
 
 }
 nav ul{
@@ -226,6 +227,14 @@ nav li:first-child{
    
 }
 
+.engineered{
+    background-color: #ffffff;
+    color:#152C3A;
+    background-size: cover;
+    height: 10%;
+   
+}
+
 .search-bar {
     display: flex;
     width: 150%;
@@ -267,6 +276,7 @@ footer{
 .contact-rectangle{
     text-align: center;
     background-color: #ffffff;
+    padding-bottom: 8%;
    
 }
 
@@ -316,4 +326,3 @@ footer{
     
    
 }
-
