--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 
-
 *{
     margin: 0;
     padding: 0; 
@@ -7,7 +6,7 @@
 }
 body{
     background-image: url('https://resourcecenter.lennar.com/wp-content/uploads/2023/06/OCH_Campana_Tesoro_Rend_StreetScene-1920x1080.jpg');
-    background-size: maintain; /* Change to cover to maintain aspect ratio */
+    background-size: cover; /* Change to cover to maintain aspect ratio */
     background-repeat: no-repeat;
     background-position: center;
     font-family: 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
